# WisperFlow-Alternative

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.depot/workflows/: build.yml
.github/workflows/: build.yml
docs/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/app/: globals.css  layout.tsx  page.tsx
docs/components/: BackgroundGlow.tsx  FAQ.tsx  Footer.tsx  Gallery.tsx  Header.tsx  Hero.tsx  HeroDownloads.tsx  HeroMacQuarantine.tsx  Logo.tsx  MacGatekeeperTip.tsx  MediaPlaceholder.tsx  Showcase.tsx  UseCases.tsx
docs/lib/: quarantine.ts  site.ts
scripts/: build_macos.sh  test_build_run.sh
src/: onboarding.html  overlay.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  icons.rs  lib.rs  main.rs  overlay.rs  shortcuts.rs  transcriber.rs  tray.rs
src/css/: theme.css
src/js/: onboarding.js  settings.js
wisperflow/: __init__.py  __main__.py  app.py  clipboard.py  config.py  ipc.py  onboarding.py  overlay.py  shortcuts.py  transcriber.py  ui.py
wisperflow/assets/: overlay.html
