[package]
name = "openbolo"
version = "0.1.0"
edition = "2021"

[lib]
name = "openbolo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
cpal = "0.16"
whisper-rs = "0.16"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["sync", "time", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
rdev = { git = "https://github.com/Narsil/rdev.git", rev = "c77b4e5456301cfa7f2226020f2a58f2f8d77c5d", features = ["unstable_grab"] }
enigo = "0.2"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
